fixed assembly path for V21

--- a/DotNetSiemensPLCToolBoxLibrary.TIAV21/DotNetSiemensPLCToolBoxLibrary.TIAV21.csproj
+++ b/DotNetSiemensPLCToolBoxLibrary.TIAV21/DotNetSiemensPLCToolBoxLibrary.TIAV21.csproj
@@ -30,22 +30,22 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Siemens.Engineering.Base">
-      <HintPath>..\..\..\Program Files\Siemens\Automation\Portal V21\PublicAPI\V21\net48\Siemens.Engineering.Base.dll</HintPath>
+      <HintPath>..\externalDlls\siemens\V21\net48\Siemens.Engineering.Base.dll</HintPath>
       <Private>False</Private>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="Siemens.Engineering.Step7">
-      <HintPath>..\..\..\Program Files\Siemens\Automation\Portal V21\PublicAPI\V21\net48\Siemens.Engineering.Step7.dll</HintPath>
+      <HintPath>..\externalDlls\siemens\V21\net48\Siemens.Engineering.Step7.dll</HintPath>
       <Private>False</Private>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="Siemens.Engineering.WinCC">
-      <HintPath>..\..\..\Program Files\Siemens\Automation\Portal V21\PublicAPI\V21\net48\Siemens.Engineering.WinCC.dll</HintPath>
+      <HintPath>..\externalDlls\siemens\V21\net48\Siemens.Engineering.WinCC.dll</HintPath>
       <Private>False</Private>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="Siemens.Engineering.WinCC.Extension">
-      <HintPath>..\..\..\Program Files\Siemens\Automation\Portal V21\PublicAPI\V21\net48\Siemens.Engineering.WinCC.Extension.dll</HintPath>
+      <HintPath>..\externalDlls\siemens\V21\net48\Siemens.Engineering.WinCC.Extension.dll</HintPath>
       <Private>False</Private>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
